Changes
=======

3.5.0 (unreleased)
------------------

- Remove zope.testing from dependencies, as it's not really needed.

- Define IIndexSort interface for indexes that support sorting and
  implement it in the FieldIndex.

- Add an ``apply`` method for KeywordIndex/TopicIndex, making them
  implement IIndexSearch that can be useful in catalog.

- Make KeywordIndex/TopicIndex use IFSets instead of IISets. This makes
  it more compatible with other indexes.
  
  IMPORTANT: This change can lead to problems, if your code somehow
  depends on the II nature of sets, as it was before. Also, FilteredSets
  have IISets pickled, their ``getIds`` method now checks if it's still
  IISet and repickles it as IFSet.

- Optimize the ``search`` method of KeywordIndex/TopicIndex by using
  multiunion for the ``or`` operator and sorting before intersection for ``and``.

Thanks Chris McDonough of repoze for supporting and useful code.

3.4.1 (2007-09-28)
------------------

- Fixed bug in package metadata (wrong homepage URL).

3.4.0 (2007-09-28)
------------------

No further changes since 3.4.0a1.

3.4.0a1 (2007-04-22)
--------------------

Initial release as a separate project, corresponds to zope.index from
Zope 3.4.0a1