@@ -87,8 +87,8 @@ class IIndexSort(Interface):
     def sort(docids, limit=None, reverse=False):
         """Sort document ids sequence using indexed values
         
-        If some of docids are not in index, KeyError is 
-        raised.
+        If some of docids are not indexed they are skipped
+        from resulting iterable.
         
         Return an iterable of document ids. Limited by
         value of the "limit" argument and optionally
